--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ numpy==1.24.3
 snowflake-connector-python==3.5.0
 snowflake-snowpark-python==1.8.0
 pandas==1.3.3
+snowflake-connector-python[pandas]
